test/files/neg/quasiquotes_disambiguation_a.check
quasiquotes_disambiguation_a.scala:4: error: value s is not a member of String
  println(a s"foo")
            ^
one error found
